--- a/Praca_Inzynierska.tex
+++ b/Praca_Inzynierska.tex
@@ -38,7 +38,7 @@
 {
   \subsection{Problematyka}
   {
-    W epoce internetu XXI wieku, gdy dostęp do wiedzy jest powszechnie dostępny, a 
+    W epoce internetu XXI wieku, gdy dostęp do wiedzy jest wyjątkowo łatwy, a 
     każdy ma możliwość zdobycia informacji na interesujący go w mniejszym,
     lub większym stopniu temat, gdy media oraz tak zwani "influencerzy" promują zdrowy
     styl życia, popularnym trendem ostatnich lat stało się dbanie o własne ciało. 
@@ -50,10 +50,10 @@
     Równie ważną częścią dbania o Swoje ciało, oprócz treningów siłowych, jest 
     zastosowanie odpowiedniej diety. Nie jest to zadanie trywialne, ponieważ jest 
     ono w pełni zależne od zapotrzebowania osoby zainteresowanej. W związku z tym
-    wiele osób chętnych do rozpoczęcia procesu odchudzania sięga po jedną z
+    wiele osób chętnych do rozpoczęcia procesu odchudzania, sięga po jedną z
     najprostszych i skutecznych metod, a mianowicie liczenie zjedzonych kalorii.
     Rekomendowana ilość dziennego ich spożycia jest zależna od szerokiego wachlarza
-    czynników, takich jak, przykładowo: płeć, wiek, wzrost, tryb życia, 
+    czynników, takich jak przykładowo: płeć, wiek, wzrost, tryb życia, 
     jednak w pracy naukowej zatytułowanej "How many calories should I eat a day?"
     \cite{cal}, autor podsumował, iż rekomendowaną dzienną ilością spożytych kalorii 
     dla przeciętnego mieszkańca Stanów Zjednoczonych, jest:
@@ -66,7 +66,7 @@
     różnego rodzaju aplikacje, mające jeszcze bardziej ułatwić to, i tak już trywialne
     zadanie.
 
-    Chodź na rynku istnieje już wiele aplikacji udostępniających taką funkcjonalność,
+    Chodź na rynku istnieje wiele aplikacji udostępniających taką funkcjonalność,
     używanie ich jest często zadaniem nieprzyjemnym i czasochłonnym, polegającym
     na wykonaniu całych serii kliknięć przeprowadzających użytkownika z jednego menu
     do drugiego, w celu wyszukania i dodania składników do listy spożytych artykułów,
@@ -105,8 +105,8 @@
     powstawały już wcześniej niż lata czterdzieste, nie przypominały w obsłudze urządzeń
     dostępnych dzisiaj i wykorzystywane były głównie w celach militarnych.
     Oficjalnie za pierwszy telefon w historii uważany jest egzemplarz Motorola 
-    DynaTAC 8000x, wynaleziony przez Martina Coopera, pracującego wtedy dla firmy 
-    Motorola \cite{history1}. I chodź zamienienie prototypu na urządzenie dostępne
+    DynaTAC 8000x, wynaleziony przez Martina Cooperaa \cite{history1}. I chodź
+    zamienienie prototypu na urządzenie dostępne
     komercyjnie zajęło następną dekadę, tak relatywnie ciężkie początki telefonów
     zamieniły się w prawdziwą lawinę nowych rozwiązań. Chodź nie jest to wiedza
     powszechna, tak pierwszy smartphone powstał już w 1994 roku, a był to IBM's Simon
@@ -137,18 +137,18 @@
     \begin{figure}[H]
       \centering
       \includegraphics[width=.9\textwidth]{android_chart.png}
-      \caption{Wykres udziału w rynku poszczególnych mobilnych systemów operacyjnych na przestrzeni 12 lat}
+      \caption{Wykres udziału w rynku poszczególnych mobilnych systemów operacyjnych na przestrzeni 10 lat}
       \label{fig:android}
     \end{figure}
     Łatwa dostępność, ilość urządzeń na których jest on zainstalowany, szeroki wachlarz
     możliwości - te cechy napędzały ambicje twórców aplikacji mobilnych. Zaoferowany
-    przez firmę Google Play Store, w przeciwieństwie do App Store pozwala na darmowe
+    przez firmę Google "Play Store", w przeciwieństwie do App Store pozwala na darmowe
     udostępnienie produktów o ile spełniają one odpowiednie warunki.
 
     Wraz z tak prężnym rozwojem rynku smartphone'ów, rozpoczęła się zmiana trendów.
     I o ile od początku XXI wieku światem królowały komputery, oferujące cały zasób 
     możliwości od nauki, po rozrywkę, tak smartphony z roku na rok coraz bardziej 
-    zaczęły przypominać swoich stacjonarnych braci. 
+    zaczęły przypominać swoich stacjonarnych "braci". 
     \begin{figure}[H]
       \centering
       \includegraphics[width=.9\textwidth]{systems_chart1.png}
@@ -161,10 +161,10 @@
       \caption{Komputery, a smartphony na przestrzeni lat 2016-2019}
       \label{fig:2016}
     \end{figure} 
-    Jednak urządzenia mobilne były i są w stanie zaoferować dużą większą wygodę 
+    Urządzenia mobilne były i są w stanie zaoferować dużą większą wygodę 
     użytkowania, przenośność, oraz system znacznie łatwiejszy do przyswojenia dla 
     przeciętnego człowieka, nie wymagający szczególnej wiedzy do poprawnego
-    zarządzania. Stąd u młodzieży umiejętności obsługi komputerów stacjonarnych
+    zarządzania. Stąd u młodzieży umiejętność obsługi komputerów stacjonarnych
     zaczęła zanikać, jako że przestaje ona być tak kluczowa jak była jeszcze 10 lat
     temu. Jak podaje strona Broadbandsearch \cite{dvm}, już w 2016 roku większość "ruchu"
     internetowego była spowodowana przez urządzenia mobilne, bo aż 51.3\%, i po 
@@ -216,8 +216,8 @@
     aplikacji mobilnych, używa się specjalnych emulatorów, na których instaluje się
     swoje oprogramowanie, a następnie na bieżąco sprawdza jego działanie. Z jednej
     strony, pozwala to na szybkie, bezpieczne i wygodne testowanie, jednak emulatory te
-    nie są w pełni poprawną symulacją prawdziwego systemu, więc często nie jest to
-    możliwe, aby sprawdzić wszystkie możliwe, zaawansowane interakcje użytkownika.
+    nie są w pełni poprawną symulacją prawdziwego systemu, więc często nie jest
+    możliwe sprawdzenie wszystkich możliwych, zaawansowanych interakcji użytkownika.
   }
   \subsection{Speech to text}
   {
@@ -227,8 +227,8 @@
     “I choose a lazy person to do a hard job. 
     Because a lazy person will find an easy way to do it.”
     W duchu tych słów, ludzie jako rasa mają w zwyczaju być leniwymi, dlatego
-    naturalną rzeczą stał się fakt, iż pisanie na klawiaturze nie jest najbardziej 
-    optymalną techniką "porozumiewania się" z maszynami.
+    naturalną rzeczą stał się fakt, iż ręczne wpisywanie poleceń nie jest tak 
+    optymalną techniką "porozumiewania się" z maszynami, jaką mogłaby być mowa.
     
     W roku 1952, Bell Laboratories stworzyło system "Audrey", który był w stanie 
     rozpoznać wypowiedziane pojedyńcze cyfry, a 10 lat później, "Shoebox" od IBM
@@ -257,17 +257,18 @@
       \item I wiele innych ...
     \end{itemize}
     Firmy te prześcigają się o tytuł dokładności rozpoznawania mowy. W roku 2016, IBM
-    osiągnęło wartość błędu 6,9\%. W 2017, Microsoft udało się osiągnąć błąd o
-    wartości 5,9\%, jednak IBM szybko kontratakowało swoim 5,5\%. Firmy te
+    osiągnęło wartość błędu 6,9\%, z czego im mniejsza jest ta wartość, tym lepiej działa
+    system. W 2017, Microsoft udało się osiągnąć błąd o
+    wartości 5,9\%, jednak IBM szybko "kontratakowało" swoim 5,5\%. Firmy te
     nadal pozostają w tyle przy Google, którego błąd w 2017 roku osiągnął 4,9\% i do
     dziś pozostaje najdokładniejszym systemem rozpoznawania mowy dostępnym na rynku.
-    Wraz z upływem czasu, technologia ta stawać się będzie coraz szybsza i
+    Wraz z upływem czasu, technologia ta będzie coraz szybsza i
     efektywniejsza i bardzo możliwe jest, iż stanie się ona głównym interfejsem służącym
     komunikacji pomiędzy człowiekiem, a maszyną. 
 
     Przez większą część historii technologii "Speech Recognition", 
     najpopularniejszą metodą był HMM - "Hidden Markov Model" \cite{markov_article},
-    opracowany już w latach osiemdziesiątych. W dużym skrócie, zamiast używania 
+    opracowany już w latach osiemdziesiątych. W dużym skrócie, zamiast nasłuchiwania 
     słów i szukania w nich dźwiękowego wzorca, ma on za zadanie przewidzieć
     prawdopodobieństwo tego, że nieznane dźwięki mogą być słowami.\\   
     Proces analizy rozpoczyna się od zebrania informacji dźwiękowej,
@@ -275,7 +276,7 @@
     problemy, takie jak:
     \begin{itemize}
       \item wyłapanie odpowiednich słów spośród dźwięków tła - szumu samochodów na 
-      ulicy, lub inne osoby rozmawiające w bliskiej odległości.
+      ulicy, lub innych osób rozmawiających w bliskiej odległości.
       \item w przypadku szybko mówiącego rozmówcy, rozróżnienie w którym momencie
       wypowiedzi słowa kończą się, oraz kiedy zaczynają się kolejne.
       \item rozróżnianie różnych akcentów i sposobów mówienia pojedynczych jednostek,
@@ -286,7 +287,7 @@
       \item poprawne zinterpretowanie zdań brzmiących w bardzo podobny sposób, ale
       oznaczających zupełnie różne rzeczy
     \end{itemize} 
-    Dodatkowo, różne języki mają różną gramatyczną strukturę, co dodatkowo utrudnia
+    Dodatkowo, różne języki mają własną gramatyczną strukturę, co dodatkowo utrudnia
     stworzenie zunifikowanego systemu, zdolnego do przetwarzania wielu języków w 
     podobny sposób.\\
     Kolejnym krokiem jest przetworzenie zebranych danych na spektogram przy użyciu
@@ -302,52 +303,27 @@
   \subsection{Bazy danych i ich rodzaje}
   {
     Sam koncept baz danych jest starszy niż same komputery stacjonarne, przykładowo w
-    postaci szafek kartotekowych znanych tak dobrze z filmów ukazujących dokumenty CIA,
-    bądź FBI. Pierwsza baza danych została zbudowana w latach sześćdziesiątych XX wieku,
+    postaci szafek kartotekowych. Pierwsza baza danych została zbudowana w latach
+    sześćdziesiątych XX wieku,
     jednak ich historia w postaci znanej obecnie rozpoczyna się dopiero w 1970 roku,
     gdy naukowiec Edgar F. Codd opublikował pracę zatytułowaną "A Relational Model of
-    Data for Large Shared Banks". Przedstawiała ona nowy sposób modelowania danych,
-    przy pomocy budowania połączonych ze sobą tabel, mogących przechować jednorazowo
+    Data for Large Shared Banks" \cite{rel-data}. Przedstawiała ona nowy sposób modelowania
+    danych, przy pomocy budowania połączonych ze sobą tabel, mogących przechować jednorazowo
     jakąkolwiek formę danych. W tych czasach ilość pamięci była droga, a relacyjna baza
     danych pozwalała na odpowiednie, efektywne nią zarządzanie. Przez następne dwie
     dekady, technologia ta prężnie się rozwijała, dominując rynek światowy, a język
     SQL (Structured Query Language) stał się standardem pozwalającym aplikacjom na
     dostęp do wszelkich danych, w ilości i postaci w jakiej potrzebowały.
 
-    W roku 1977, Larry Ellison, Bob Miner i Ed Oates założyli firmę o nazwie Software
-    Development Laboratories (SDL), której celem było stworzenie bazy danych kompatybilnej
-    z relacyjnym systemem. W przeciągu następnych 5 lat spółka zmieniła swoją nazwę
-    dwukrotnie, w 1979 na Reletional Software Inc (RSI), a ostatecznie na w 1982 na
-    Oracle Systems Corporation, obecnie jednego z największych i najbardziej dochodowych
-    dystrybutorów baz danych na świecie. Swoje oprogramowanie napisali w języku C, co
-    dawało bardzo dobre rezultaty pod względem optymalizacyjnym i pozwalało na 
-    przeniesienie go na dowolną platformę wspierającą C. Przez wiele lat, Oracle
-    bezkonkurencyjnie dominowało rynek, jednak pod koniec lat osiemdziesiątych, pojawiła
-    się nowy firma, chcąca przejąć nad nim kontrolę, a był to Microsoft, który stworzył
-    bazę danych na system OS/2, zwaną SQL Server 1.0, a następnie zaprojektował jej port
-    na Windows NT, który powoli stawał się najpopularniejszym systemem operacyjnym
-    używanym w komputerach osobistych. Sprawiło to, że SQL Server zaczął przeistaczać
-    się w najnowszy standard w małej i średniej wielkości firmach, a nowo opracowane
-    środowiska programistyczne Visual Basic, a następnie .NET pozwalały na łatwą
-    integrację baz danych do projektów. We wczesnych latach dziewięćdziesiątych, pojawiło
-    się najnowsze rozwiązanie, które wpłynęło na rynek w jeszcze większym stopniu niż
-    którykolwiek z jego poprzedników, przynajmniej w kontekście rynku online. Aby zwalczać
-    dominację Microsoftu i jego ścisłą kontrolę nad kodem używanym w większości systemów
-    komputerów stacjonarnych, został uformowany ruch open-source - otwartego, a co za tym
-    idzie darmowego kodu źródłowego. W roku 1995 powstała pierwsza wersja MySQL, opracowana
-    przez firmę fundującą cały projekt open-source - MySQL AB. Oprogramowanie to stało
-    się pierwszą znaczącą bazą danych używaną w przypadku stron internetowych, do dziś
-    wykorzystywaną przez firmy takie jak Google, Facebook, czy Twitter. Otwartość kodu
-    pozwoliła twórcom stron na niezależność wobec spółek takich jak Oracle'a, czy Microsoft'u. 
-
     Relacyjne bazy danych zostały zaprojektowane w czasach poprzedzających popularność
     internetu i były przeznaczone do operowania na jednej maszynie. W przypadku, gdy
-    przytłaczająca ilość danych wykraczała poza możliwości jednego urządzenia, jedynym
+    przytłaczająca ilość danych wykraczała poza możliwości pojedynczego urządzenia, jedynym
     sposobem było połączenie wielu serwerów w klastry, a to sprawiało że przeniesienie
-    tradycyjnej bazy danych opartej na SQL i przeznaczonej do działania na pojedynczym
-    serwerze, było zadaniem wyjątkowo skomplikowanym i często dającym złe rezultaty.
+    tradycyjnej bazy danych opartej na SQL, było zadaniem wyjątkowo skomplikowanym i często
+    dającym złe rezultaty.
     Aby temu zaradzić, zaczęto przykładać uwagę do technologii istniejącej już w latach
-    sześćdziesiątych, a która w 1998 roku została przemianowana na NoSQL (Not only SQL).
+    sześćdziesiątych, a która w 1998 roku została przemianowana na NoSQL (Not only SQL),
+    czyli "Nierelacyjne bazy danych".
     Nie było to rozwiązanie perfekcyjne, gdyż nie posiadało wielu zalet relacyjnych baz
     danych, jednak było szybsze i znacznie lepiej skalowalne, cechy które w okresie po
     internetowej rewolucji WEB 2.0, gdy w bardzo szybkim tempie pojawiało się zapotrzebowanie
@@ -363,9 +339,9 @@
       postaci obiektów, posiadających w sobie określone pola.
       \item Rozproszone bazy danych (Distributed databases) - Dane przechowywane mogą być
       w wielu plikach, na wielu urządzeniach, rozproszone w różnych sieciach.
-      \item Nierelacyjne bazy danych (NoSQL databases) - Pozwala na przechowywanie i
+      \item Nierelacyjne bazy danych (NoSQL databases) - Pozwalają na przechowywanie i
       manipulowanie danymi, które nie są ustrukturyzowane, w przeciwieństwie do relacyjnych
-      baz danych, które definiują jak skomponowane mają być dane dostarczone do bazy. Ich
+      baz danych, definiujących jak skomponowane mają być dane dostarczone do bazy. Ich
       popularność rosła wprost proporcjonalnie do ilości aplikacji web-owych i ich
       złożoności.
       \item Grafowe bazy danych (Graph databases) - Bazy, gdzie związki pomiędzy
@@ -374,17 +350,14 @@
       bazy danych, projektowane z myślą o dużej ilości transakcji wykonywanych pomiędzy
       wieloma użytkownikami. 
       \item Hurtownia danych (Data warehouses) - Baza zaprojektowana pod kątem
-      szybkiej wymiany danych i ich analizy
+      szybkiej wymiany danych i ich analizy.
       \item Wielomodelowa baza danych (Multi-model database) - Ich celem jest połączenie
       wielu typów modeli baz danych w jeden, zintegrowany back-end. Mogą dzięki temu
       pomieścić wiele typów danych.
       \item Autonomiczne bazy danych (Self-driving databases) - Najnowsze i najbardziej
-      rewolucyjne bazy, oparte na chmurowych bazach danych, wykorzystujące uczenie
-      maszynowe do zautomatyzowania nimi zarządzania.
+      rewolucyjne, oparte na chmurowych bazach danych, wykorzystujące uczenie
+      maszynowe do zautomatyzowania ich zarządzania.
     \end{itemize}
-
-    Zdobywającymi coraz większą popularność systemami bazodanowymi są chmurowe bazy danych,
-    które postaram opisać się w kolejnym rozdziale.
   }
   \subsection{Chmurowe bazy danych}
   {
@@ -426,10 +399,7 @@
     pytanie po co to wszystko robić, skoro wcześniej zrobił to już ktoś inny i
     dał on dostęp do pożądanych funkcjonalności. Dodatkowo co jeśli dana aplikacja
     jest zależna od innej usługi, przykładowo w przypadku gdy programista chciałby
-    mieć dostęp do aktualnej pogody w dowolnym rejonie na świecie? Napisanie algorytmu
-    będącego w stanie stworzyć model pogodowy, poprzez komunikację ze stacjami,
-    lub satelitami pogodowymi na całym świecie w celu zebrania, przetworzenia, i 
-    przewidzenia warunków pogodowych brzmi jak wielki projekt sam w sobie.
+    mieć dostęp do aktualnej pogody w dowolnym rejonie na świecie? 
     Z pomocą przychodzą API, czyli Application Programming Interface, mające za 
     zadanie nie tylko ułatwić programistom tworzenie aplikacji, ale także 
     umożliwić komunikację pomiędzy różnymi usługami. Czym w takim razie dokładnie jest API?
@@ -504,7 +474,7 @@
   {
     Istnieje bardzo dużo aplikacji oferujących możliwość liczenia kalorii, jednak w 
     większości różnią się one jedynie szatą graficzną, oraz dostępem do funkcjonalności,
-    których część jest nieczęsto niedostępna do darmowego użytkowania.
+    których część jest nierzadko niedostępna do darmowego użytkowania.
     \subsubsection{Fitatu}
     {
       Jest to aplikacja najprostsza w obsłudze z pozostałych rozwiązań, jako że stara się
@@ -639,7 +609,7 @@
          Ilość wartości odżywczych, która jest mniej dokładna, niż w przypadku aplikacji 
          Fitatu, jednak zdecydowanie większa niż w bezpłatnej wersji Yazio \\
          \hline
-         Menu podsumowujące znajdujące się tuż pod posiłkami i przedstawia dane w
+         Menu podsumowujące znajdujące się tuż pod posiłkami i przedstawiające dane w
          postaci aż dwóch różnych diagramów. & 
          Do odblokowania wszystkich funkcji aplikacja zmusza użytkowania do założenia
          konta. \\
@@ -716,10 +686,8 @@
     \end{itemize}
   }
 }
-
 \section{Technologie i narzędzia wykorzystane w projekcie}
 {
-
   \subsection{Dart}
   {
     Dart jest językiem programowania opracowanym przez firmę Google i pierwszy raz
@@ -757,11 +725,11 @@
     na udostępnieniu narzędzi do szybkiego i łatwego projektowania interfejsu użytkownika,
     będąc przy tym bardzo wydajnym. Obecnie, umożliwia on używanie tego samego kodu na
     wielu platformach, takich jak Android, czy iOS, jako że w przeciwieństwie do
-    konkurencyjnych rozwiązań, nie wykorzystuje on narzędzi oferowanych przez daną
-    platformę \cite{flutter}. Zamiast tego, Flutter opiera się w pełni na własnym
+    konkurencyjnych rozwiązań, nie wykorzystuje on narzędzi oferowanych przez dany system
+    \cite{flutter}. Zamiast tego, Flutter opiera się w pełni na własnym, zoptymalizowanym
     systemie "widget'ów", co pozwala wyróżnić go pod względem szybkości i wydajności,
     i tak jak w przypadku systemu Windows zwykło się mówić, że wszystko w Windows jest
-    oknem, tak we Flutterze wszystko jest widgetem. Tworzą one wspólnie drzewo hierarchiczne,
+    "oknem", tak we Flutterze wszystko jest "widgetem". Tworzą one wspólnie drzewo hierarchiczne,
     gdzie każdy widget dziedziczy po innym, nadrzędnym komponencie, aż do widgetu będącego
     kontenerem przechowującym całą aplikację, zwanego zazwyczaj MaterialApp, lub
     CupertinoApp.\\
@@ -771,7 +739,7 @@
   }
   \subsection{Cloud Firestore}
   {
-    Cloud Firestore jest jedną z usług dostępnych w Google Firebase - platformy której
+    Cloud Firestore jest jedną z usług dostępnych w Google Firebase - platformie której
     głównym celem jest wspomaganie twórców aplikacji mobilnych poprzez oferowanie
     zestawu gotowych narzędzi. Firestore jest nierelacyjną, chmurową bazą danych, która
     jest w stanie w czasie rzeczywistym informować aplikację o zmianach w swojej bazie,
@@ -781,10 +749,10 @@
     aktywnie korzysta aplikacja, a następnie po odzyskaniu połączenia synchronizuje
     wszelkie lokalne zmiany z danymi znajdującymi się w chmurze.\\
     Dane w Firestore przechowywane są zgodnie z modelem danych NoSQL, w dokumentach
-    zawierających pola mapowane na wartości. Te dokumenty przechowywane są w kolekcjach - \\
+    zawierających pola mapowane na wartości. Przetrzymywane są one w kolekcjach - \\
     kontenerach na dokumenty, których można używać do organizowania danych i tworzenia
     zapytań. Dokumenty są w stanie obsłużyć wiele różnych typów danych, od prostych
-    łańcuchów i liczb po złożone, zagnieżdżone obiekty. Ponadto, dane mogą być odczytywane
+    łańcuchów i liczb, po złożone, zagnieżdżone obiekty. Ponadto, dane mogą być odczytywane
     na poziomie dokumentu, bez konieczności pobierania całej kolekcji lub jakichkolwiek
     zagnieżdżonych podkolekcji.
   }
@@ -807,15 +775,15 @@
     specjalnych emulatorów, których zadaniem jest stworzenie wirtualnego środowiska
     przypominającego w działaniu realne urządzenie przenośne, poprzez naśladowanie
     sprzętu znajdującego się w urządzeniach mobilnych. Odzwierciedlenie realnego
-    procesora byłoby zadaniem wyjątkowo wymagającym pod względem zasobów,
-    przekładając się na szybkość z jaką działałby dany emulator, jednak dzięki wspomnianemu
+    procesora jest zadaniem wyjątkowo wymagającym pod względem zasobów,
+    przekładając się na szybkość z jaką działa dany emulator, jednak dzięki wspomnianemu
     wcześniej w przypadku maszyn wirtualnych oprogramowaniu "Hypervisor", gdy architektury
     procesorów urządzenia emulowanego jak i komputera stacjonarnego są ze sobą zgodne,
     możliwe jest użycie procesora hosta, jako procesora w emulowanym urządzeniu.\\
     Największą zaletą używania emulatorów jest oczywiście prędkość, z jaką można testować
     swoją aplikację, bez zbędnej potrzeby budowania jej, a następnie eksportowania
     na posiadane urządzenie mobilne, instalowania, a w końcu sprawdzania. Inną mniej
-    oczywistą, jest testowanie aplikacji pod kątem interakcji z fizycznymi
+    oczywistą zaletą, jest testowanie aplikacji pod kątem interakcji z fizycznymi
     sensorami, jak przykładowo akcelerometr, gdyż dużo łatwiej jest dostosować ustawienia
     w wirtualnym środowisku, aby następnie mogły one poprawnie działać już na realnym
     urządzeniu.\\
@@ -827,7 +795,7 @@
     urządzeń do testowania w znacznym stopniu ogranicza dostępną pamięć systemową.
     Wydajność z jaką operuje emulator jest ściśle związana z urządzeniem na którym jest
     on uruchomiony, stąd może on nie tylko działać wolniej niż zazwyczaj, ale także
-    wyrzucać błędy, niekoniecznie związane z działaniem samej aplikacji, lub emulatora.\\
+    "wyrzucać" błędy, niekoniecznie związane z działaniem samej aplikacji, lub emulatora.\\
     Emulatory nigdy nie będą w stanie w pełni oddać działania prawdziwego urządzenia i
     nie będą w stanie zaoferować wszystkich dostępnych w urządzeniach mobilnych możliwości,
     także testowanie na fizycznym urządzeniu zawsze będzie procederem wymaganym, do
@@ -869,7 +837,7 @@
         \item v - Visual mode, pozwalający zaznaczyć część tekstu
         \item ESC - umożliwia przejście do Normal mode, domyślnego trybu poruszania się
         \item : - włączenie trybu Command-line, umożliwiającego dostęp nie tylko do
-        zaawansowanych opcji, ale także opcji zapisu lub wyjścia z pliku
+        zaawansowanych opcji, ale także zapisu lub wyjścia z pliku
       \end{itemize} 
     \end{itemize}
     Przedstawione wyżej opcje to tylko wierzchołek góry lodowej, a poprawne nauczenie
