--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -58,6 +58,11 @@
   title = "Fast Fourier Transformation FFT - Basics",
   url = "https://www.nti-audio.com/en/support/know-how/fast-fourier-transform-fft"
 }
+@article{rel-data,
+  author          = {Edgar F. Codd},
+  title           = {https://dl.acm.org/doi/10.1145/362384.362685},
+  year            = {1970}
+}
 @online{microservices,
   title = "What are microservices?",
   url = "https://microservices.io/"
