3rd chapter first draft

--- a/Praca_Inzynierska.tex
+++ b/Praca_Inzynierska.tex
@@ -38,9 +38,9 @@
 {
   \subsection{Problematyka}
   {
-    W epoce internetu XXI wieku, gdy dostęp do wiedzy jest wyjątkowo łatwy, a 
-    każdy ma możliwość zdobycia informacji na interesujący go w mniejszym,
-    lub większym stopniu temat, gdy media oraz tak zwani "influencerzy" promują zdrowy
+    W epoce internetu XXI wieku dostęp do wiedzy jest wyjątkowo łatwy. Każdy ma możliwość
+    zdobycia informacji na interesujący go w mniejszym, lub większym stopniu temat,
+    a gdy media oraz tak zwani "influencerzy" promują zdrowy
     styl życia, popularnym trendem ostatnich lat stało się dbanie o własne ciało. 
     Trend popędzany również łatwym dostępem do najróżniejszych portali
     społecznościowych i chęcią pokazania Swoich zdjęć na forum publicznym sprawił, 
@@ -66,7 +66,7 @@
     różnego rodzaju aplikacje, mające jeszcze bardziej ułatwić to, i tak już trywialne
     zadanie.
 
-    Chodź na rynku istnieje wiele aplikacji udostępniających taką funkcjonalność,
+    Choć na rynku istnieje wiele aplikacji udostępniających taką funkcjonalność,
     używanie ich jest często zadaniem nieprzyjemnym i czasochłonnym, polegającym
     na wykonaniu całych serii kliknięć przeprowadzających użytkownika z jednego menu
     do drugiego, w celu wyszukania i dodania składników do listy spożytych artykułów,
@@ -101,14 +101,14 @@
   \subsection{Rynek aplikacji mobilnych}
   {
     Urządzenia mobilne są obok komputerów uważane za jedne z najbardziej rewolucyjnych
-    i przełomowych technologii opracowanych w XX wieku. I chodź pierwsze prototypy 
+    i przełomowych technologii opracowanych w XX wieku. I choć pierwsze prototypy 
     powstawały już wcześniej niż lata czterdzieste, nie przypominały w obsłudze urządzeń
     dostępnych dzisiaj i wykorzystywane były głównie w celach militarnych.
     Oficjalnie za pierwszy telefon w historii uważany jest egzemplarz Motorola 
-    DynaTAC 8000x, wynaleziony przez Martina Cooperaa \cite{history1}. I chodź
+    DynaTAC 8000x, wynaleziony przez Martina Cooperaa \cite{history1}. I choć
     zamienienie prototypu na urządzenie dostępne
     komercyjnie zajęło następną dekadę, tak relatywnie ciężkie początki telefonów
-    zamieniły się w prawdziwą lawinę nowych rozwiązań. Chodź nie jest to wiedza
+    zamieniły się w prawdziwą lawinę nowych rozwiązań. Choć nie jest to wiedza
     powszechna, tak pierwszy smartphone powstał już w 1994 roku, a był to IBM's Simon
     \cite{history2}. Tak więc przez następne lata firmy prześcigały się technologicznie,
     każda przyczyniając się w mniejszym lub większym stopniu do rozwoju rynku urządzeń
@@ -146,9 +146,9 @@
     udostępnienie produktów o ile spełniają one odpowiednie warunki.
 
     Wraz z tak prężnym rozwojem rynku smartphone'ów, rozpoczęła się zmiana trendów.
-    I o ile od początku XXI wieku światem królowały komputery, oferujące cały zasób 
+    I o ile od początku XXI wieku światem rządziły komputery, oferujące cały zasób 
     możliwości od nauki, po rozrywkę, tak smartphony z roku na rok coraz bardziej 
-    zaczęły przypominać swoich stacjonarnych "braci". 
+    zaczęły przypominać urządzenia desktopowe. 
     \begin{figure}[H]
       \centering
       \includegraphics[width=.9\textwidth]{systems_chart1.png}
@@ -228,7 +228,7 @@
     Because a lazy person will find an easy way to do it.”
     W duchu tych słów, ludzie jako rasa mają w zwyczaju być leniwymi, dlatego
     naturalną rzeczą stał się fakt, iż ręczne wpisywanie poleceń nie jest tak 
-    optymalną techniką "porozumiewania się" z maszynami, jaką mogłaby być mowa.
+    optymalną techniką "komunikacji" z maszynami, jaką mogłaby być mowa.
     
     W roku 1952, Bell Laboratories stworzyło system "Audrey", który był w stanie 
     rozpoznać wypowiedziane pojedyńcze cyfry, a 10 lat później, "Shoebox" od IBM
@@ -259,7 +259,7 @@
     Firmy te prześcigają się o tytuł dokładności rozpoznawania mowy. W roku 2016, IBM
     osiągnęło wartość błędu 6,9\%, z czego im mniejsza jest ta wartość, tym lepiej działa
     system. W 2017, Microsoft udało się osiągnąć błąd o
-    wartości 5,9\%, jednak IBM szybko "kontratakowało" swoim 5,5\%. Firmy te
+    wartości 5,9\%, jednak IBM szybko odpowiedziało swoim 5,5\%. Firmy te
     nadal pozostają w tyle przy Google, którego błąd w 2017 roku osiągnął 4,9\% i do
     dziś pozostaje najdokładniejszym systemem rozpoznawania mowy dostępnym na rynku.
     Wraz z upływem czasu, technologia ta będzie coraz szybsza i
@@ -362,7 +362,7 @@
   \subsection{Chmurowe bazy danych}
   {
     Ideą chmurowych baz danych jest zmniejszenie zapotrzebowania firm na zakup własnych
-    "fizycznych" serwerów, a zamiast tego zaoferowanie im płatnego dostępu do maszyn
+    fizycznych serwerów, a zamiast tego zaoferowanie im płatnego dostępu do maszyn
     wirtualnych, na których dana firma mogłaby postawić swoją bazę danych. Czym jednak
     są maszyny wirtualne? 
     
@@ -815,30 +815,12 @@
     modyfikowanie i dodawanie własnych skrótów klawiszowych, oraz posiada wiele opcji
     konfiguracji, stąd zależnie od preferencji i potrzeb można go dostosować do wielu
     postaci.\\
-    Do podstawowych opcji udostępnianych przez VIM należą:
+    Do podstawowych opcji udostępnianych przez VIM można zaliczyć:
     \begin{itemize}
-      \item do poruszania się kursorem służą klawisze:
-      \begin{itemize}
-        \item h - jeden znak w lewo
-        \item j - linijka w dół
-        \item k - linijka w górę
-        \item l - jeden znak w prawo
-        \item b - poprzednie słowo
-        \item e - koniec słowa
-        \item w - początek następnego słowa
-        \item \$ - koniec linii 
-        \item 0 - początek linii
-      \end{itemize}
+      \item poruszanie się kursorem w trybie normalnym przy użyciu takich klawiszy jak:\\
+      "h, j, k, l, ..."
       \item do przełączania się pomiędzy różnymi trybami służą klawisze:
-      \begin{itemize}
-        \item i - Insert mode, włączający możliwość pisania po lewo od kursora
-        \item a - Insert mode, włączający możliwość pisania po prawo od kursora
-        \item o - Insert mode, włączający możliwość pisania o jedną linię niżej
-        \item v - Visual mode, pozwalający zaznaczyć część tekstu
-        \item ESC - umożliwia przejście do Normal mode, domyślnego trybu poruszania się
-        \item : - włączenie trybu Command-line, umożliwiającego dostęp nie tylko do
-        zaawansowanych opcji, ale także zapisu lub wyjścia z pliku
-      \end{itemize} 
+      "i, a, o, v, ESC, :, ..."
     \end{itemize}
     Przedstawione wyżej opcje to tylko wierzchołek góry lodowej, a poprawne nauczenie
     się możliwości oferowanych przez VIM może zająć wiele miesięcy.
@@ -847,6 +829,88 @@
 
 \section{Proces powstawania aplikacji}
 {
+  Proces tworzenia aplikacji rozpoczął się od podjęcia decyzji w jakiej technologii powinna
+  zostać ona napisana. Różne języki programowania charakteryzuje szereg zalet i wad, przykładowo
+  najpopularniejszym obecnie wykorzystywanym przy projektowaniu aplikacji mobilnych
+  językiem jest Python,
+  \begin{figure}[H]
+    \centering
+    \includegraphics[width=.9\textwidth]{top-lang-info.PNG}
+    \caption{Najczęściej wykorzystywane języki do tworzenia aplikacji mobilnych}
+    \label{fig:lang}
+  \end{figure} 
+  ze względu na swoją prostotę i czytelność kodu, jednak jego największą wadą jest bardzo
+  słaba optymalizacja, przekładająca się bezpośrednio na szybkość działania aplikacji.
+  Rozwiązaniem dla tego typu problemu mogła być przykładowo Java, bądź podobny do niej,
+  choć w większym stopniu nastawiony na pisanie aplikacji mobilnych Kotlin. Mniej znanym,
+  jednak zyskującym popularność frameworkiem, stworzonym w pełni z myślą o aplikacjach mobilnych
+  jest Flutter, wprowadzający dużo ciekawych rozwiązań rewolucjonizujących proces pisania
+  aplikacji mobilnych. Dzięki własnemu, wbudowanemu systemowi widget'ów, pozwala na
+  bezproblemowe tworzenie wieloplatformowych, dobrze zoptymalizowanych aplikacji, a także
+  w bardzo dużym stopniu ułatwia projektowanie interfejsu użytkownika.
+
+  Po ostatecznym wyborze Flutter'a jako domyślnej technologii, nadszedł czas na
+  zaprojektowanie podstawowej logiki aplikacji. Najważniejszym jej elementem, jest
+  pozyskiwanie danych o zjedzonych produktach, dlatego należało wybrać odpowiednie API
+  żywieniowe, a następnie zaimplementować komunikację, między nim, a aplikacją. 
+  \begin{figure}[H]
+    \centering
+    \includegraphics[width=.9\textwidth]{app_dev_1.PNG}
+    \caption{Moduł komunikujący się z API żywnościowym}
+    \label{fig:app1}
+  \end{figure}
+  Początkowo, komunikacja oparta była jedynie na wpisaniu frazy do pola tekstowego, a
+  następnie potwierdzeniu za pomocą przycisku. 
+  \begin{figure}[H]
+    \centering
+    \includegraphics[width=.9\textwidth]{app_dev_2.PNG}
+    \caption{Pole tekstowe, oraz przycisk zatwierdzający wpisaną frazę}
+    \label{fig:app2}
+  \end{figure}
+  Po naciśnięciu przycisku wyświetlał się ekran ładowania, podczas którego aplikacja odbiera
+  potrzebne informacje, a następnie przechowywane były one w odpowiedniej liście.
+  Dodany został przycisk, pozwalający przejść na ekran ukazujący wszystkie wyszukane
+  produkty i wyświetlający je w formie wierszy.
+  \begin{figure}[H]
+    \centering
+    \includegraphics[width=.9\textwidth]{app_dev_3.PNG}
+    \caption{Metoda wyświetlająca listę zjedzonych produktów w postaci wierszy}
+    \label{fig:app3}
+  \end{figure}
+  Następnym ważnym krokiem było zaimplementowanie speech to text i zintegrowanie go z
+  projektem. Istnienie biblioteki dla Flutter'a udostępniającej dostęp do wbudowanego w
+  telefon i opartego na technologii Google rozpoznawania głosu w dużym stopniu ułatwiło
+  cały proces. Moduł ten wymaga od użytkownika zezwolenia na używanie mikrofonu, dostępu do
+  internetu, a także najnowszej wersji domyślnej w większości systemów aplikacji "Google"
+  do poprawnego jego działania. Po przytrzymaniu przycisku ze znakiem mikrofonu, telefon
+  wydaje dźwięk sygnalizujący rozpoczęcie nasłuchiwania, a następnie po odsłuchaniu
+  wypowiedzianej frazy, wysyła zapytanie do API żywnościowego zwracającego pożądany produkt.
+  \begin{figure}[H]
+    \centering
+    \includegraphics[width=.9\textwidth]{app_dev_4.PNG}
+    \caption{Metoda odpowiedzialna za nasłuchiwanie}
+    \label{fig:app4}
+  \end{figure}
+  Po otrzymaniu działającego systemu, należało go zoptymalizować i doprowadzić do czytelniejszej,
+  a także efektywniejszej postaci. Zostały dodane alert boxy, informujące użytkownika
+  o nieprawidłowych stanach aplikacji i zabezpieczające jej działanie.
+
+  Do tego momentu, wszelkie informacje o zjedzonych produktach były przechowywane w pamięci
+  jedynie w czasie działania aplikacji, a po wyłączeniu jej zostały utracone. W związku z tym,
+  ostatnim dużym krokiem było przechowywanie danych w zewnętrznej bazie danych, aby
+  użytkownik miał do nich dostęp niezależnie od urządzenia z którego korzysta. Odpowiednią
+  do tego celu usługą okazał się być Google Cloud Firestore, nierelacyjna baza danych
+  przechowująca informacje w dokumentach i kolekcjach. Aby zapewnić poprawne i bezpieczne
+  odczytywanie danych, został dodany ekran rejestracji, oraz logowania, nadające każdemu
+  użytkownikowi prywatne identyfikatory, na podstawie których baza decyduje skąd pobierane
+  i dokąd wysyłane będą informacje o zjedzonych produktach.
+  \begin{figure}[H]
+    \centering
+    \includegraphics[width=.9\textwidth]{app_dev_5.PNG}
+    \caption{Metody wysyłające, oraz odbierające dane z bazy danych}
+    \label{fig:app5}
+  \end{figure}
+
 }
 
 \section{Podsumowanie}
