--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -89,3 +89,7 @@
   url = "https://flutter.dev/docs/resources/architectural-overview"
 }
 https://www.globalme.net/blog/how-does-speech-recognition-technology-work/
+
+
+zdjecia:
+najpopularniejsze jezyki programowania - https://www.appypie.com/top-programming-languages-for-mobile-app-development
